--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1 class="text-xl-center text-success">Assessment</h1>
+<h2 class="text-center text-primary">Pracownicy</h2>
 <form class="row g-3" th:action="@{/employees}" method="post" th:object="${newEmployee}">
     <div class="col-md-6">
         <label  class="form-label" >Imię</label>
