--- a/src/main/resources/templates/employees-list.html
+++ b/src/main/resources/templates/employees-list.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1 class="text-xl-center text-success">Assessment</h1>
+<h2 class="text-center text-primary">Pracownicy</h2>
 <nav class="navbar navbar-light bg-light">
     <form class="container-fluid justify-content-start">
         <button class="btn btn-outline-success me-2" type="button" >
