--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,8 @@
     <title>Home</title>
 </head>
 <body>
-<h1 class="text-xl-center text-success">Assessment</h1>
+<h1 class="text-xxl-center text-success">Assessment</h1>
+<h2 class="text-center text-primary">Strona główna</h2>
     <nav class="navbar navbar-light bg-light">
         <form class="container-fluid justify-content-start">
             <button class="btn btn-outline-success me-2" type="button" >
