add services view

--- a/src/main/resources/templates/add-department.html
+++ b/src/main/resources/templates/add-department.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="/webjars/bootstrap/5.1.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/webjars/bootstrap/5.1.0/js/bootstrap.min.js"></script>
     <title>Add Department</title>
 </head>
 <body>
-
+<h1 class="text-xl-center text-success">Assessment</h1>
+<h2 class="text-center text-primary">Działy</h2>
+<form class="row g-3" th:action="@{/departments}" method="post" th:object="${newDepartment}">
+    <div class="col-md-6">
+        <label  class="form-label" >Nazwa</label>
+        <input type="text" class="form-control" th:field="*{name}">
+    </div>
+    <div class="col-md-6">
+        <label class="form-label">Adres</label>
+        <select th:field="*{localization}" type="text" class="form-select">
+            <option selected value="">Wybierz...</option>
+            <option th:each="_address : ${adressDepartm.findAll()}" th:value="${_address.id}" th:text="${_address.toString()}">
+        </select>
+    </div>
+    <div class="col-12">
+        <button type="submit" class="btn btn-primary">Zapisz</button>
+    </div>
+</form>
 </body>
 </html>
