--- a/src/main/resources/templates/add-address.html
+++ b/src/main/resources/templates/add-address.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="/webjars/bootstrap/5.1.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/webjars/bootstrap/5.1.0/js/bootstrap.min.js"></script>
     <title>Add Address</title>
 </head>
 <body>
-
+<h1 class="text-xl-center text-success">Assessment</h1>
+<h2 class="text-center text-primary">Adresy</h2>
+<form class="row g-3" th:action="@{/addresses}" method="post" th:object="${newAddress}">
+    <div class="col-md-6">
+        <label  class="form-label" >Ulica</label>
+        <input type="text" class="form-control" th:field="*{street}">
+    </div>
+    <div class="col-md-6">
+        <label  class="form-label">Numer domu</label>
+        <input type="text" class="form-control" th:field="*{houseNumber}" placeholder="">
+    </div>
+    <div class="col-md-6">
+        <label  class="form-label">Kod pocztowy</label>
+        <input type="text" class="form-control" th:field="*{postalCode}" placeholder="">
+    </div>
+    <div class="col-md-6">
+        <label  class="form-label">Miasto</label>
+        <input type="text" class="form-control" th:field="*{city}" placeholder="">
+    </div>
+    <div class="col-12">
+        <button type="submit" class="btn btn-primary">Zapisz</button>
+    </div>
+</form>
 </body>
 </html>
