--- a/src/main/resources/templates/add-position.html
+++ b/src/main/resources/templates/add-position.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="/webjars/bootstrap/5.1.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/webjars/bootstrap/5.1.0/js/bootstrap.min.js"></script>
     <title>Add Position</title>
 </head>
 <body>
-
+<h1 class="text-xl-center text-success">Assessment</h1>
+<h2 class="text-center text-primary">Stanowiska</h2>
+<form class="row g-3" th:action="@{/positions}" method="post" th:object="${newPosition}">
+    <div class="col-md-6">
+        <label  class="form-label" >Nazwa</label>
+        <input type="text" class="form-control" th:field="*{name}">
+    </div>
+    <div class="col-12">
+        <button type="submit" class="btn btn-primary">Zapisz</button>
+    </div>
+</form>
 </body>
 </html>
