--- a/src/main/resources/templates/employees-list.html
+++ b/src/main/resources/templates/employees-list.html
@@ -35,7 +35,7 @@
         <th>Wynagrodzenie</th>
         <th>Dział</th>
         <th>Stanowisko</th>
-        <th>Operacja</th>
+        <th>Akcja</th>
     </tr>
     </thead>
     <tbody>
