--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -35,7 +35,7 @@
     </div>
     <div class="col-md-6">
         <label  class="form-label">Data zatrudnienia</label>
-        <input type="text" class="form-control" th:datetime="*{employmentDate}" placeholder="">
+        <input type="text" class="form-control" th:field="*{employmentDate}" placeholder="">
     </div>
     <div class="col-md-6">
         <label  class="form-label">Wynagrodzenie</label>
